# smartleia

./: .travis.yml  .travis.yml.swp  AUTHORS  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
docs/source/: api.rst  conf.py  hard.rst  index.rst  installation.rst  publi.rst  quickstart.rst  quickstart_firmware.rst  quickstart_hardware.rst  quickstart_software.ipynb  target.rst
docs/source/.ipynb_checkpoints/: quick-checkpoint.ipynb  software_quickstart-checkpoint.ipynb
docs/source/_static/css/: custom.css
docs/source/c/: test.rst
smartleia/: __init__.py  __main__.py  test_applet.py
tests/: test_smartleia.py
