[tool]
[tool.poetry]
name = "smartleia"
version = "1.0.1"
description = "Here is detailed the python API of the `smartleia` package."

authors = [
    "The LEIA team"
]

[tool.poetry.dependencies]
python = "*"
black = "==19.*,>=19.10.0.b0"
bump2version = "==1.*,>=1.0.0"
coverage = "==5.*,>=5.1.0"
flake8 = "==3.*,>=3.7.9"
ipython = "==7.*,>=7.14.0"
mypy = "==0.*,>=0.770.0"
pandoc = "==1.*,>=1.0.2"
pylint = "==2.*,>=2.5.2"
pyserial = "==3.*,>=3.4.0"
pytest = "==5.*,>=5.2.0"
pytest-csv = "==2.*,>=2.0.2"
pytest-runner = "==5.*,>=5.2.0"
